# parallel-reverb-raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  basic.mtl  bihnotes.md  bvhnotes.md  config.json  config_hrtf.json  converter.py  generate.py  go.sh  kernel.cl  main.cpp  mat.json  output.maxpat  pulse.aif  rayverb_lib.cpp  rayverb_lib.h  readme.md  test.sh  test_convolver.maxpat  todo.md
assets/: bedroom.json  config.json  config_hrtf.json  far.json  far_2.json  large_square.json  mat.json  medium.json  near_c.json  near_l.json  near_r.json  stonehenge.json  tunnel.json
cmd/: CMakeLists.txt  config.h  config.sty  helpers.cpp  helpers.h  main.cpp  makefile  parallel_raytrace.1  parallel_raytrace.1.md
demo/: gen.sh  generate.py  test_convolver.maxpat
demo/assets/test_models/: echo_tunnel.skp
docs/: readme.md
examples/: test_convolver.maxpat
filter_test/: iir.py  iir_v2.py  linkwitzriley.py  main.py
hrtf_analysis/: IRC1002.json  IRC1050.json  analyse_hrtf.py  generate_test_hrtf_data.py
rayverb/: CMakeLists.txt  bvh.cpp  bvh.h  clstructs.h  config.h  filters.cpp  filters.h  helpers.cpp  helpers.h  kernel.cl  kernel.cpp  main.cpp  rayverb.cpp  rayverb.h
report/: CMakeLists.txt  appendices.md  appendices.md.tex  bib.bib  config.sty  makefile  report.md  report.md.bak
tests/: CMakeLists.txt  attenuation_tests.h  hrtf_tests.cpp  hrtf_tests.h  main.cpp  raytrace_tests.cpp  raytrace_tests.h  rayverb_tests.h
view_test/: view_test.pde
viewer/: viewer.pde
